dataset1235/2025-2/2868285114/users/2008605748/executions/3649835072_3691284457.log
== RUN (2025-08-24 05:28:44)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float
n4 = float
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:33:09)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4) / (1+2+3+4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:28:42)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float
n4 = float
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:34:16)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4) / (1+2+3+4)
print("Media ponderada: ", round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:28:46)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float
n4 = float
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 05:34:17)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4) / (1+2+3+4)
print("Media ponderada: ", round(media, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:28:49)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float
n4 = float
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:33:06)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4) / (1+2+3+4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:34:14)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4) / (1+2+3+4)
print("Media ponderada: ", round(media, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota: Media ponderada:  7.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:30:38)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a 1 nota: Digite a 2 nota: Digite a 3 nota: Digite a 4 nota:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:32:41)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 05:32:42)
-- CODE: 
n1 = float(input("Digite a 1 nota: "))
n2 = float(input("Digite a 2 nota: "))
n3 = float(input("Digite a 3 nota: "))
n4 = float(input("Digite a 4 nota: "))
media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 5
    media = (n1*1 + n2*2 + n3*3 + n4*4)./ (1+2+3+4)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
